--- a/src/CILDisassembler.Tests/CILDisassembler.Tests.csproj
+++ b/src/CILDisassembler.Tests/CILDisassembler.Tests.csproj
@@ -48,16 +48,29 @@
     <Reference Include="System.Core" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Tests.cs" />
+    <Compile Include="DisassemblerDebugTests.cs" />
+    <Compile Include="DisassemblerReleaseTests.cs" />
+    <Compile Include="DissassemblerTestsGenerator.cs" />
+    <Compile Include="ExceptionTests.cs" />
+    <Compile Include="DisassemblerTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TestMethodAccess.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\CILDisassembler.Tests.Release\CILDisassembler.Tests.Release.csproj">
+      <Project>{6b44a94a-bdaa-499a-a6e4-b6b094836ac8}</Project>
+      <Name>CILDisassembler.Tests.Release</Name>
+    </ProjectReference>
     <ProjectReference Include="..\CILDisassembler\CILDisassembler.csproj">
       <Project>{1b4c07ab-f13f-46a3-849b-264171433a27}</Project>
       <Name>CILDisassembler</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\CILDisassembler.Tests.Debug\CILDisassembler.Tests.Debug.csproj">
+      <Project>{a846269a-e3c9-45d1-b294-69babee5e8ad}</Project>
+      <Name>CILDisassembler.Tests.Debug</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets" Condition="Exists('$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets')" />
